tests/negative/neg_pr118i_enum_visible_collision.safe
package neg_pr118i_enum_visible_collision

   type traffic is (red, yellow, green);
   type alarm is (red, amber, blue);
